Embedding check (#181)
* checkpoint

* Embedding

* Move tests to longtest

* More shared to a small module

* Assorted test cleanups

* Weird paths