@@ -57,6 +57,7 @@
     <modules>
         <module>math</module>
         <module>tensor</module>
+        <module>tensor-test</module>
         <module>safetensors</module>
         <module>core</module>
         <module>native</module>
@@ -100,6 +101,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire.version}</version>
+                <configuration>
+                    <excludedGroups>${excludedITGroups}</excludedGroups>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -190,6 +194,8 @@
                     <configuration>
                         <additionalOptions>
                             <additionalOption>-Xdoclint:none</additionalOption>
+                            <additionalOption>--add-modules</additionalOption>
+                            <additionalOption>jdk.incubator.vector</additionalOption>
                         </additionalOptions>
                     </configuration>
                 </plugin>
